--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html>
 	<head>
+        <meta charset='utf-8'>
 		<title>ASCII</title>
 	</head>
-	<body>
+	<body style="background:black; color:white;">
 		<script src="p5.js"></script>
 		<script src="index.js"></script>
 	</body>
